[package]
name = "cha-cha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["http1", "server", "tcp"] }
tower-http = { version = "0.3", features = ["fs"] }
tower = { version = "0.4", features = ["make"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
